Change layout and add sidebar

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Lorem text generator."
+      content="CoffeeIpsum | Lorem text generator."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -16,7 +16,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <base href="%PUBLIC_URL%/" >
-    <title>Lorem Text Generator</title>
+    <title>Coffee Ipsum | Lorem Text Generator</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
